--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,3 +1,4 @@
+<button (click)="goBack()">go back</button>
 <div *ngIf="hero">
     <h2>{{hero.name | uppercase}} Details</h2>
     <div><span>id: {{hero.id}}</span></div>
@@ -7,4 +8,3 @@
         </label>
     </div>
 </div>
-
